...
      latitude: lat + POI_OVERLAP_OFFSET.latitude,
      longitude: lng + POI_OVERLAP_OFFSET.longitude,
    };
  };

  return (
    <View style={StyleSheet.absoluteFill} testID="map-view">
      <RNMapView
        ref={mapRef}
        style={StyleSheet.absoluteFill}
        region={region}
        showsUserLocation
        showsMyLocationButton={false} // We will use our custom button
...
